# mono-repo

./: ARCHITECTURE.md  DEVCONTAINER_SETUP.md  Makefile  README.md  SETUP_TASKS.md
.claude/: settings.local.json
.devcontainer/: .p10k.zsh  .zshrc  Dockerfile.devcontainer  devcontainer.json
.github/: pull_request_template.md
.github/workflows/: devcontainer-ci.yml
application/data-connectors/data-mirror/: Cargo.toml  Makefile
application/data-connectors/data-mirror/src/: main.rs
application/data-connectors/data-mirror/src/egress/: IMPLEMENTATION_PLAN.md
application/data-connectors/egress/: pyproject.toml
application/data-connectors/handrolled/: README.md
application/data-connectors/handrolled/egress/postgres/: ARCHITECTURE.md  Cargo.toml  README.md
application/data-connectors/ingress/: pyproject.toml
application/entity-resolution/: Makefile  README.md  pyproject.toml  test_chart.html
application/entity-resolution/.claude/: settings.local.json
application/entity-resolution/data/: clusters_threshold_0.8.csv  clusters_threshold_0.9.csv  clusters_threshold_0.95.csv  fake_1000.parquet  historical_50k_sample.csv
application/entity-resolution/reports/: match_weights.html  waterfall_chart.html
application/entity-resolution/src/: entity_resolution_demo.py  entity_resolution_postgres.py  explore_demo_data.py
application/orchestration/: pyproject.toml
application/orchestration/orchestration/: __init__.py
application/orchestration/orchestration/assets/: __init__.py  dbt_assets.py
application/orchestration/orchestration/jobs/: __init__.py  data_pipeline.py
application/orchestration/orchestration/resources/: __init__.py  postgres.py
application/orchestration/orchestration/schedules/: __init__.py  daily_schedule.py
application/reporting/: pyproject.toml
application/research/: pyproject.toml
application/shared-lib/: pyproject.toml
application/transformation/: .user.yml  dbt_project.yml  profiles.yml  pyproject.toml
application/transformation/models/marts/core/: dim_person.sql
application/transformation/models/staging/: schema.yml  stg_person_records.sql
infrastructure/docker/: clickhouse-compose.yml  postgres-compose.yml
scripts/: clickhouse-init.sql  postgres-init.sql  seed_postgres.py  setup-direnv.sh
