[project]
name = "orchestration"
version = "0.1.0"
description = "Dagster orchestration for data platform"
requires-python = ">=3.11,<3.12"
dependencies = [
    "dagster>=1.5.0",
    "dagster-webserver>=1.5.0",
    "dagster-dbt>=0.21.0",
    "psycopg2-binary>=2.9.0",
    "pandas>=2.0.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["orchestration"]

[tool.uv]
dev-dependencies = [
    "ipython>=8.0.0",
]