[project]
name = "reporting"
version = "0.1.0"
description = "Lightdash/dbt reporting layer"
requires-python = ">=3.11,<3.12"
dependencies = [
    "dbt-postgres>=1.7.0",
    "psycopg2-binary>=2.9.0",
    "pandas>=2.0.0",
    "pyyaml>=6.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "sqlfluff>=3.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["models", "macros", "dashboards"]