[project]
name = "research"
version = "0.1.0"
description = "Research and experimentation environment"
requires-python = ">=3.12,<3.13"
dependencies = [
    "jupyter>=1.0.0",
    "jupyterlab>=4.0.0",
    "psycopg2-binary>=2.9.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "scikit-learn>=1.3.0",
    "plotly>=5.17.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["notebooks", "experiments", "outputs"]