[project]
name = "transformation"
version = "0.1.0"
description = "SQLMesh transformations on ClickHouse"
requires-python = ">=3.11,<3.12"
dependencies = [
    "sqlmesh[clickhouse]>=0.100.0",
    "clickhouse-driver>=0.2.6",
    "pandas>=2.0.0",
    "pyyaml>=6.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "sqlfluff>=3.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["models", "macros", "seeds"]