[project]
name = "data-egress"
version = "0.1.0"
description = "Data egress pipelines - ClickHouse to external"
requires-python = ">=3.10,<3.11"
dependencies = [
    "dlt[clickhouse]>=0.4.0",
    "clickhouse-driver>=0.2.6",
    "pandas>=2.0.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["egress"]