[project]
name = "data-egress"
version = "0.1.0"
description = "Data egress pipelines - PostgreSQL to external"
requires-python = ">=3.10,<3.11"
dependencies = [
    "dlt[postgres]>=0.4.0",
    "psycopg2-binary>=2.9.0",
    "pandas>=2.0.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["egress"]